# AutoVanityFair

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.claude/: settings.local.json
api/: server.py
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
config/: config.yaml
scripts/: initial_setup.py  seed_posts.py  test_linkedin_login.py  test_openai.py
src/automation/: feed_scraper.py  linkedin_bot.py  openoutreach_adapter.py  session_manager.py
src/content/: asset_generator.py  comment_generator.py  content_filter.py  embeddings.py  generator.py  keyword_taxonomy.py  news_agent.py  post_generator.py  prompts.py  rag_engine.py  reranker.py  rss_aggregator.py  validators.py
src/core/: config_manager.py  rate_limiter.py  safety_monitor.py  scheduler.py
src/database/: crud.py  models.py  vector_store.py
src/utils/: helpers.py  logging_config.py
tests/: conftest.py  test_config_manager.py  test_content_filter.py  test_crud.py  test_generators.py  test_news_agent.py  test_rss_aggregator.py  test_safety_monitor.py  test_vector_store.py
ui/: app.py
ui/components/: editor.py  queue_card.py  stats_widget.py
ui/pages/: content_library.py  feed_aggregator.py  posts_queue.py  settings.py
ui/views/: analytics.py  comments_queue.py  content_library.py  feed_aggregator.py  posts_queue.py
web/: index.html
